// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GridCol Default should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Column
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridCol DoubleSpan should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Span is always 2
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridCol FullWidthSpan should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Span is always full width
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridCol HalfWidthSpan should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Span is always half width
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridCol MixedSpans should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "100%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=2
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            span=1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridCol SingleSpan should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Span is always 1
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
